[package]
name = "proto_ping"
version = "0.1.0"
authors = ["dorzac <dorzac0@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.2.10"
pnet = "0.23.0"
pnet_macros_support = "0.23.0"
dns-lookup = '1.0.1'
ctrlc = '3.1.4'
